[package]
name = "reson"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

#[build]
#target = ["wasm32-unknown-unknown"]

#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "target-feature=+simd128"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
